--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -1,10 +1,31 @@
-/* ----------- Header----------- */
+/*************************
+GENERAL
+*************************/
+
+body {
+	margin: 0;
+	line-height: 1.4;
+	font-family: georgia;
+}
+
+.birds {
+	width: 100%;
+	height: 300px;
+	background: url(../img/birds.JPG) center;
+	background-size: 1440px 964px;
+}
+
+
+/*************************
+Heading
+*************************/
 
 .wrap {
-	width: 1000px;
+	width: 1275px;
 	position: relative;
 	margin: 0 auto;
 }
+
 
 header {
 	height: 90px;
@@ -12,8 +33,9 @@ header {
 
 header nav {
 	position: absolute;
-	right: 0;
+	right: 100px;
 	top: 18px;
+
 }
 
 header nav ul li {
@@ -28,21 +50,24 @@ header nav ul li a:hover, header nav ul li a.active {
 header nav ul li a {
 	text-decoration: none;
 	font-family: georgia;
-	color: rgba(0, 0, 0, 0.6);
+	color: rgba(185, 185, 185, 0.6);
 	text-transform: uppercase;
 	font-weight: 700;
-	-webkit-transition: .2 color linear;
-	-moz-transition: .2 color linear;
-	-ms-transition: .2 color linear;
-	-o-transition: .2 color linear;
-	transition: .2 color linear;
+	-webkit-transition: .3 color linear;
+	-moz-transition: .3 color linear;
+	-ms-transition: .3 color linear;
+	-o-transition: .3 color linear;
+	transition: .3 color linear;
 	position: relative;
 	font-size: 12px;
+
 }
 
 
 
-/* ----------- Navigation ----------- */
+/*************************
+NAVIGATION
+*************************/
 nav ul {
 	list-style: none;
 	list-style-image: none;
@@ -50,7 +75,14 @@ nav ul {
 	padding: 0;
 }
 
+/* selected nav link */
+nav a.selected, nav a:hover {
+	color: #000000;
+}
 
+/*************************
+COLORS
+*************************/
 
 
 
