--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -1,12 +1,10 @@
 /*************************
 GENERAL
 *************************/
-
 body {
 	margin: 0;
 	line-height: 1.4;
-	font-family: georgia;
-
+	font-family: 'Overlock', cursive;
 }
 
 .birds {
@@ -30,13 +28,14 @@ body {
 	text-align: center;
 	margin-bottom: 8px;
 	font-weight: 300;
+	font-family: 'Overlock SC', cursive;
 }
 
 .homeIntro .subline {
 	display: block;
 	text-align: center;
 	color: #bbb;
-	font-family: georgia;
+	font-family: 'Overlock', cursive;
 	font-size: 14px;
 	text-transform: uppercase;
 	font-weight: 700;
@@ -49,7 +48,7 @@ body {
 	font-size:  17px;
 	line-height: 1.6em;
 	color: #666;
-	font-family: georgia;
+	font-family: 'Overlock', cursive;
 	column-count: 2;
 	column-gap: 0;
 	-webkit-column-count: 2;
@@ -96,6 +95,8 @@ SKILL SECTION
 	text-align: center;
 }
 
+
+
 /*************************
 HEADING
 *************************/
@@ -121,14 +122,15 @@ header nav ul li a:hover, header nav ul li a.active {
 
 header nav ul li a {
 	text-decoration: none;
-	font-family: georgia;
+	font-family: 'Overlock', cursive;
 	color: rgba(185, 185, 185, 0.6);
 	text-transform: uppercase;
 	font-weight: 700;
 	position: relative;
-	font-size: 12px;
+	font-size: 15px;
 
 }
+
 
 
 /*************************
@@ -143,15 +145,16 @@ nav ul {
 
 /* selected nav link */
 nav a.selected, nav a:hover {
-	color: #000000;
+	color: #030303;
 }
+
+
 
 /*************************
 FOOTER
 *************************/
-
 footer {
-	font-size: 0.75em;
+	font-size: 0.85em;
 	text-align: center;
 	clear: both;
 	padding-top: 50px;
@@ -160,8 +163,8 @@ footer {
 }
 
 .social-icon {
-	width: 50px;
-	height: 50px;
+	width: 54px;
+	height: 72px;
 	margin: 0 5px;
 }
 
