--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -7,6 +7,10 @@ body {
 	font-family: 'Overlock', cursive;
 }
 
+a {
+	text-decoration: none;
+}
+
 .birds {
 	width: 100%;
 	height: 300px;
@@ -117,13 +121,13 @@ header nav ul li {
 }
 
 header nav ul li a:hover, header nav ul li a.active {
-	color: rgba(0, 0, 0, 0.9);
+	color: rgba(200, 200, 200, 0.9);
 }
 
 header nav ul li a {
 	text-decoration: none;
 	font-family: 'Overlock', cursive;
-	color: rgba(185, 185, 185, 0.6);
+	color: rgba(148, 148, 148, 0.7);
 	text-transform: uppercase;
 	font-weight: 700;
 	position: relative;
@@ -145,7 +149,7 @@ nav ul {
 
 /* selected nav link */
 nav a.selected, nav a:hover {
-	color: #030303;
+	color: #F0F0F0;
 }
 
 
@@ -168,11 +172,44 @@ footer {
 	margin: 0 5px;
 }
 
+/*************************
+PAGE: ABOUT
+*************************/
+
+.about {
+	margin: 0 auto;
+	padding: 0 5%;
+	max-width: 940px;
+}
+
+.profilePhoto {
+	display: inline-block;
+	max-width: 140px;
+	margin: 10px 30px 40px;
+	border-radius: 100%;
+	border: #101010 2px solid;
+	float: left;
+}
+
+
 
 /*************************
 COLORS
 *************************/
+/* links */
+a {
+	color: rgba(128, 128, 128, 0.7);
+}
 
+/* nav link */
+nav a, nav a:visited {
+	color: rgba(128, 128, 128, 0.7)
+}
+
+/* selected nav link */
+nav a.selected, nav a:hover {
+	color: rgba(200, 200, 200, 0.9);;
+}
 
 
 
