--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -11,6 +11,8 @@ a {
 	text-decoration: none;
 }
 
+
+
 .birds {
 	width: 100%;
 	height: 300px;
@@ -53,13 +55,13 @@ a {
 	line-height: 1.6em;
 	color: #666;
 	font-family: 'Overlock', cursive;
-	column-count: 2;
+	/*column-count: 2;
 	column-gap: 0;
 	-webkit-column-count: 2;
 	-webkit-column-gap: 0;
 	-moz-column-count: 2;
-	-moz-column-gap: 0;
-	text-align: center;
+	-moz-column-gap: 0;*/
+	text-align: justify;
 	margin: 0 auto;
 }
 
@@ -191,11 +193,16 @@ PAGE: ABOUT
 	float: left;
 }
 
+.about p {
+	text-align: justify;
+}
+
 
 
 /*************************
 COLORS
 *************************/
+
 /* links */
 a {
 	color: rgba(178, 178, 178, 0.8);
