Border on boxes
Added border and border radius to skill boxes.

--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -118,6 +118,8 @@ SKILL SECTION
 	padding: 20px 50px;
 	margin: 0;
 	background: #F1F1F1;
+	border: #919191 1px solid;
+	border-radius: 10px;
 
 }
 
