--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -202,22 +202,24 @@ PAGE: ABOUT
 #about {
 	margin: 0 auto;
 	padding: 0 5%;
-	max-width: 950px;
+	max-width: 940px;
 }
 
 
 .profilePhoto {
 	display: inline-block;
 	max-width: 150px;
-	margin: -50px 10px 40px;
+	margin: -50px 10px 50px;
 	border-radius: 100%;
 	border: #101010 3px solid;
 	float: left;
 }
 
+
 #primary p {
 	text-align: justify;
 	width: 670px;
+
 	
 }
 
@@ -233,6 +235,8 @@ PAGE: ABOUT + CONTACT
 #secondary ul {
 	list-style: none;
 	list-style-image: none;
+	margin-top: -190px;
+	margin-right: 50px;
 }
 
 .contactInfo {
@@ -244,11 +248,11 @@ PAGE: ABOUT + CONTACT
 
 .contactInfo a {
 	display: block;
-	min-height: 20px;
+	min-height: 10px;
 	background-repeat: no-repeat;
 	background-size: 20px 20px;
 	padding: 0 0 0 30px;
-	margin: 0 0 10px;
+	margin: 0 0 9px;
 }
 
 .contactInfo li.phone a {
