--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -13,7 +13,6 @@ a {
 }
 
 
-
 .birds {
 	width: 100%;
 	height: 300px;
@@ -40,14 +39,12 @@ MAIN PAGE INTRO
 	text-align: center;
 	margin-bottom: 8px;
 	font-weight: 300;
-	font-family: 'Overlock SC', cursive;
 }
 
 .homeIntro .subline {
 	display: block;
 	text-align: center;
 	color: #bbb;
-	font-family: 'Overlock', cursive;
 	font-size: 14px;
 	text-transform: uppercase;
 	font-weight: 700;
@@ -60,7 +57,6 @@ MAIN PAGE INTRO
 	font-size:  17px;
 	line-height: 1.6em;
 	color: #666;
-	font-family: 'Overlock', cursive;
 	text-align: justify;
 	margin: 1% auto;
 }
@@ -212,6 +208,14 @@ nav a.selected, nav a:hover {
 	color: #F0F0F0;
 }
 
+/* nav transition effect */
+nav a {
+	transition: color .2s linear;
+	-webkit-transition: color .2s linear;
+	-moz-transition: color .2s linear;
+	-o-transition: color .2s linear;
+}
+
 
 
 /*************************
@@ -253,10 +257,6 @@ nav a, nav a:visited {
 nav a.selected, nav a:hover {
 	color: rgba(200, 200, 200, 0.9);
 }
-
-
-
-
 
 
 
