--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -75,15 +75,14 @@ SKILL SECTION
 
 #skillContainer {
 	margin: 0;
-	/*padding: 0 0 0px 350px;*/
-	padding-left: 34.375%;
+	padding-left: 25%;
 	display: block;
 }
 
 #skillContainer li {
 	float: left;
-/*	margin: 3%;
-*/	color: #BDC3C7;
+	margin: 3%;
+	color: #BDC3C7;
 	list-style: none;
 /*	margin: 5px 26px;*/
 
@@ -227,8 +226,8 @@ footer {
 	clear: both;
 	padding-top: 20px;
 	padding-bottom: 5px;
-	color: #E5E5E5;
-	background-color: #C1C1C1;
+	color: #777777;
+	background-color: #C7C7C7;
 	border-top: #919191 1px solid;
 }
 
@@ -241,7 +240,7 @@ footer {
 /* picture hover effect */
 
 .social-icon {
-	-webkit-filter: grayscale(100%);
+	-webkit-filter: grayscale(75%);
 	-webkit-transition: all .3s linear;
 	-moz-transition: all .3s linear;
 	-o-transition: all .3s linear;
