--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -23,7 +23,7 @@ a {
 
 
 .wrapper {
-	width: 1000px;
+	width: 1020px;
 	position: relative;
 	margin: 0 auto;
 
@@ -54,7 +54,7 @@ MAIN PAGE INTRO
 
 .homeIntro p {
 	width: 80%;
-	font-size:  17px;
+	font-size:  1.063em;
 	line-height: 1.6em;
 	color: #666;
 	text-align: justify;
@@ -93,16 +93,16 @@ PAGE: ABOUT
 *************************/
 
 #about {
-	margin: 0 auto;
+	margin: 0;
 	padding: 0 5%;
-	max-width: 940px;
+	max-width: 1020px;
 }
 
 
 .profilePhoto {
 	display: inline-block;
 	max-width: 150px;
-	margin: -60px 30px 40px;
+	margin: -6% 3% 4%;
 	border-radius: 100%;
 	border: #101010 3px solid;
 	float: left;
@@ -111,7 +111,7 @@ PAGE: ABOUT
 
 #primary p {
 	text-align: justify;
-	width: 640px;
+	width: 650px;
 
 	
 }
@@ -130,6 +130,7 @@ PAGE: ABOUT + CONTACT
 	list-style-image: none;
 	margin-top: -190px;
 	margin-right: 40px;
+
 }
 
 .contactInfo {
@@ -139,8 +140,11 @@ PAGE: ABOUT + CONTACT
 	font-size: 0.95em;
 }
 
+.aboutBox, .contactBox {
+	display: inline;
+}
+
 .contactInfo a {
-	display: block;
 	min-height: 10px;
 	background-repeat: no-repeat;
 	background-size: 20px 20px;
@@ -224,8 +228,8 @@ footer {
 	font-size: 0.85em;
 	text-align: center;
 	clear: both;
-	padding-top: 20px;
-	padding-bottom: 5px;
+	padding-top: 2%;
+	padding-bottom: 0.05px;
 	color: #777777;
 	background-color: #C7C7C7;
 	border-top: #919191 1px solid;
