--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -21,6 +21,14 @@ a {
 	border-bottom: #101010 3px solid;
 }
 
+.dreams {
+	width: 100%;
+	height: 300px;
+	background: url(../img/dreams.jpg) center;
+	background-size: 1440px 964px;
+	border-bottom: #101010 3px solid;
+}
+
 
 .wrapper {
 	width: 1020px;
@@ -95,25 +103,31 @@ PAGE: ABOUT
 #about {
 	margin: 0;
 	padding: 0 5%;
-	max-width: 1020px;
+	max-width: 1000px;
 }
 
+.aboutBox {
+	right: 450px;
+	left: 450px;
+}
 
 .profilePhoto {
 	display: inline-block;
 	max-width: 150px;
-	margin: -6% 3% 4%;
+	margin: 1% 3% 4%;
 	border-radius: 100%;
 	border: #101010 3px solid;
 	float: left;
 }
 
+.profileBox {
+	margin-bottom: 15%;
+}
 
 #primary p {
 	text-align: justify;
-	width: 650px;
+	width: 70%;
 
-	
 }
 
 /*************************
@@ -128,7 +142,7 @@ PAGE: ABOUT + CONTACT
 #secondary ul {
 	list-style: none;
 	list-style-image: none;
-	margin-top: -190px;
+	margin-top: -155%;
 	margin-right: 40px;
 
 }
@@ -140,12 +154,8 @@ PAGE: ABOUT + CONTACT
 	font-size: 0.95em;
 }
 
-.aboutBox, .contactBox {
-	display: inline;
-}
-
 .contactInfo a {
-	min-height: 10px;
+	min-height: 1%;
 	background-repeat: no-repeat;
 	background-size: 20px 20px;
 	padding: 0 0 0 30px;
