--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -5,7 +5,7 @@ body {
 	margin: 0;
 	line-height: 1.4;
 	font-family: 'Raleway', 'sans-serif';
-	background-color: #F6F6F6;
+	background-color: #ECEAE7;
 }
 
 a {
