--- a/For Vitalik/css/style.css
+++ b/For Vitalik/css/style.css
@@ -1,11 +1,116 @@
 /*--------------GENERAL--------------*/
+body {
+	background-color: Georgia;
+}
 
-/*--------------HEADER--------------*/
+a {
+	text-decoration: none;
+}
+
+
+/*--------------HEADING--------------*/
+
+header {
+	float: left;
+	margin: 0 0 30px 0;
+	padding: 5px 0 0 0 ;
+	width: 100%;
+}
+
+#logo {
+	text-align: center;
+	margin: 0;
+}
+
+h1 {
+	font-family: Georgia;
+	margin: 15px 0;
+	font-size: 1.75em;
+	line-height: 1em;
+}
+
+h2 {
+	font-size: 0.75em;
+	margin: -5px 0 0;
+}
 
 /*--------------NAVIGATION--------------*/
 
-/*--------------PAGE: PORTFOLIO--------------*/
+nav {
+	text-align: center;
+	padding: 10px 0;
+	margin: 20px 0 0;
+}
 
-/*--------------PAGE: ABOUT--------------*/
+nav ul {
+	list-style: none;
+	margin: 0 10px;
+	padding: 0;
+}
+
+nav li {
+	display: inline-block;
+}
+
+nav a {
+	font-weight: 800;
+	padding: 15px 10px;
+}
+
+/*--------------PAGE: WOKR--------------*/
+
+/*--------------PAGE: INFO--------------*/
 
 /*--------------FOOTER--------------*/
+footer {
+	font-size: 0.75em;
+	text-align: center;
+	clear: both;
+	padding-top: 50px;
+	color: #000;
+}
+
+/*-------------- COLORS --------------*/
+
+/* site body */
+body {
+	background-color: #D1D1D1;
+}
+
+/* header color */
+header {
+	background-color: #656565;
+	border-color: #060606; 
+}
+
+/* logo text */
+h1, h2 {
+	color: #CDCDCD;
+}
+
+/* links */
+a {
+	color: #DCDCDC;
+}
+
+/* nav link */
+nav a, nav a:visited {
+	color: #CDCDCD;
+}
+
+/* selected nav link */
+nav a.selected, nav a:hover {
+	color: #999999;
+
+
+
+
+
+
+
+
+
+
+
+
+
