--- a/For Vitalik/css/style.css
+++ b/For Vitalik/css/style.css
@@ -1,12 +1,17 @@
 /*--------------GENERAL--------------*/
 body {
-	background-color: Georgia;
+	font-family: 'Alike', 'serif';
 }
 
 a {
 	text-decoration: none;
 }
 
+#wrapper {
+	max-width: 1000px;
+	margin: 0 auto;
+	padding: 0 5%
+}
 
 /*--------------HEADING--------------*/
 
@@ -23,7 +28,7 @@ header {
 }
 
 h1 {
-	font-family: Georgia;
+	font-family: 'Playfair Display SC', 'serif';
 	margin: 15px 0;
 	font-size: 1.75em;
 	line-height: 1em;
@@ -55,6 +60,7 @@ nav li {
 nav a {
 	font-weight: 800;
 	padding: 15px 10px;
+	text-transform: suppercase;
 }
 
 /*--------------PAGE: WOKR--------------*/
@@ -66,8 +72,10 @@ footer {
 	font-size: 0.75em;
 	text-align: center;
 	clear: both;
-	padding-top: 50px;
+	padding-top: 30px;
+	padding-bottom: 30px;
 	color: #000;
+	background-color: #ADADAD;
 }
 
 /*-------------- COLORS --------------*/
@@ -101,6 +109,7 @@ nav a, nav a:visited {
 /* selected nav link */
 nav a.selected, nav a:hover {
 	color: #999999;
+
 
 
 
