--- a/For Vitalik/css/style.css
+++ b/For Vitalik/css/style.css
@@ -8,9 +8,13 @@ a {
 }
 
 #wrapper {
-	max-width: 1000px;
+	max-width: 900px;
 	margin: 0 auto;
-	padding: 0 5%
+	padding: 2% 2% 2% 2%;
+}
+
+.text {
+	text-align: justify;
 }
 
 /*--------------HEADING--------------*/
@@ -72,8 +76,9 @@ footer {
 	font-size: 0.75em;
 	text-align: center;
 	clear: both;
-	padding-top: 30px;
-	padding-bottom: 30px;
+	margin-top: 12%;
+	padding-top: 1%;
+	padding-bottom: 1%;
 	color: #686868;
 	background-color: #ADADAD;
 }
@@ -88,7 +93,6 @@ body {
 /* header color */
 header {
 	background-color: #656565;
-	border-color: #060606; 
 }
 
 /* logo text */
