--- a/For Vitalik/css/style.css
+++ b/For Vitalik/css/style.css
@@ -17,11 +17,12 @@ a {
 	text-align: justify;
 }
 
+
 /*--------------HEADING--------------*/
 
 header {
 	float: left;
-	margin: 0 0 30px 0;
+	margin: 60px 0 30px 0;
 	padding: 5px 0 0 0 ;
 	width: 100%;
 }
@@ -29,11 +30,11 @@ header {
 #logo {
 	text-align: center;
 	margin: 0;
-	padding-top: 65px;
+	padding-top: 55px;
 }
 
 .box {
-	height: 250px;
+	height: 200px;
 }
 
 h1 {
@@ -52,7 +53,7 @@ h2 {
 
 nav {
 	text-align: center;
-	padding: 10px 0;
+	padding: 0;
 	margin: 20px 0 0;
 }
 
