--- a/For Vitalik/css/responsive.css
+++ b/For Vitalik/css/responsive.css
@@ -66,14 +66,15 @@
 		font-size: 2.5em;
 	}
 
-	h2 {
+/*	h2 {
 		font-size: 0.825em;
 		margin-bottom: 20px;
-	}
+	}*/
 
 	header {
 		border-bottom: 5px solid #848484;
 		border-top: 5px solid #848484;
+		margin-top: 70px;
 		margin-bottom: 60px;
 	}
 
