--- a/For Vitalik/css/style.css
+++ b/For Vitalik/css/style.css
@@ -22,7 +22,7 @@ a {
 
 header {
 	float: left;
-	margin: 60px 0 30px 0;
+	margin: 70px 0 30px 0;
 	padding: 5px 0 0 0 ;
 	width: 100%;
 }
@@ -39,22 +39,22 @@ header {
 
 h1 {
 	font-family: 'Playfair Display SC', 'serif';
-	margin: 15px 0;
+	margin: -120px 0;
 	font-size: 1.75em;
 	line-height: 1em;
 }
 
-h2 {
+/*h2 {
 	font-size: 0.75em;
 	margin: -5px 0 0;
-}
+}*/
 
 /*--------------NAVIGATION--------------*/
 
 nav {
 	text-align: center;
-	padding: 0;
-	margin: 20px 0 0;
+	padding: 40px;
+	margin: -95px 0 0;
 }
 
 li {
@@ -107,17 +107,17 @@ header {
 
 /* logo text */
 h1, h2 {
-	color: #CDCDCD;
+	color: #656565;
 }
 
 /* links */
 a {
-	color: #DCDCDC;
+	color: #656565;
 }
 
 /* nav link */
 nav a, nav a:visited {
-	color: #CDCDCD;
+	color: #656565;
 }
 
 /* selected nav link */
