--- a/For Vitalik/css/responsive.css
+++ b/For Vitalik/css/responsive.css
@@ -37,6 +37,19 @@
 		margin: 0 5% 80px 0;
 	}
 
+	/*************************
+	HEADER
+	*************************/
+
+	nav {
+		background: none;
+		float: right;
+		font-size: 1.125em;
+		margin-right: 5%
+		text-align: right;
+		width: 45%
+	}
+
 }
 
 
