--- a/For Vitalik/css/style.css
+++ b/For Vitalik/css/style.css
@@ -31,10 +31,12 @@ header {
 	text-align: center;
 	margin: 0;
 	padding-top: 55px;
+	position: fixed;
 }
 
 .box {
-	height: 200px;
+	height: 210px;
+	background: url(../img/picture.jpg);
 }
 
 h1 {
@@ -89,6 +91,7 @@ footer {
 	margin-top: 12%;
 	padding-top: 1%;
 	padding-bottom: 1%;
+	bottom: 0;
 	color: #686868;
 	background-color: #ADADAD;
 }
