--- a/For Vitalik/css/responsive.css
+++ b/For Vitalik/css/responsive.css
@@ -8,6 +8,13 @@
 		width: 25%
 
 	}
+
+	header {
+		border-bottom: 2px solid #848484;
+		border-top: 2px solid #848484;
+		margin-top: 70px;
+		margin-bottom: 40px;
+	}
 }
 
 @media screen and (min-width: 480px) {
@@ -83,8 +90,8 @@
 	}*/
 
 	header {
-		border-bottom: 5px solid #848484;
-		border-top: 5px solid #848484;
+		border-bottom: 4px solid #848484;
+		border-top: 4px solid #848484;
 		margin-top: 70px;
 		margin-bottom: 60px;
 	}
