--- a/For Vitalik/css/responsive.css
+++ b/For Vitalik/css/responsive.css
@@ -18,7 +18,7 @@
 
 	#homeBanner {
 	font-size: 1.75em;
-	color: rgba(0, 0, 0, 0.6);
+	color: rgba(0, 0, 0, 0.55);
 	position: relative;
 	right: 115px;
 	top: 150px;
@@ -64,6 +64,17 @@
 		margin: 0 5% 80px 0;
 	}
 
+	/*************************
+	HOME BANNER
+	*************************/
+	#homeBanner {
+	font-size: 1.75em;
+	color: rgba(0, 0, 0, 0.55);
+	position: relative;
+	right: 230px;
+	top: 180px;
+	}
+
 }
 
 
@@ -95,7 +106,7 @@
 
 	#homeBanner {
 	font-size: 1.75em;
-	color: rgba(0, 0, 0, 0.6);
+	color: rgba(0, 0, 0, 0.55);
 	position: relative;
 	right: 420px;
 	top: 200px;
