--- a/For Vitalik/css/style.css
+++ b/For Vitalik/css/style.css
@@ -8,7 +8,7 @@ a {
 }
 
 #wrapper {
-	max-width: 900px;
+	max-width: 950px;
 	margin: 0 auto;
 	padding: 2% 2% 2% 2%;
 }
@@ -55,7 +55,7 @@ header {
 
 h1 {
 	font-family: 'Playfair Display SC', 'serif';
-	margin: -120px 0;
+	margin: -23% 0;
 	font-size: 1.85em;
 	line-height: 1em;
 }
@@ -66,7 +66,7 @@ h1 {
 nav {
 	text-align: center;
 	padding: 40px;
-	margin: -95px 0 0;
+	margin: -8% 0 0;
 }
 
 li {
